# BSC-BNB-ERC20-token-sniper

./: .gitignore  Cargo.toml  README.md  ticker.json
docs/: index.html
src/: main.rs  types.rs
